--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,10 @@
 .header-1{
-    background:rgb(253, 180, 70);
+    /*background:rgb(253, 180, 70);*/
 
 }
 li{
     list-style: none;
 }
 .header{
-    background:rgb(75, 253, 5);
+    /*background:rgb(75, 253, 5);*/
 }
