--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,14 @@
 .header-1{
     /*background:rgb(253, 180, 70);*/
-
+float:left;
+background: #25ff92;
+padding:20px 30px;
 }
 a{
     /*list-style: none;*/
 float:left;
+background: #25ff92;
+padding:20px 30px;
 }
 .header{
     /*background:rgb(75, 253, 5);*/
