--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 li{
 	list-style:none;
 }
-.heade{
+.header{
 	background-color:#26d0c9;
 	color:#fff;
 	height:90px;
@@ -10,6 +10,7 @@ li{
     font-size:36px;
     float:left;
     padding:20px 30px;
+	padding-right:50px;
 }
 a{
     /*list-style: none;*/
