--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,13 +32,12 @@ li{
 .footer{
 	background-color:#2f5167;
 	color:#fff;
-	height:120px
+	height:120px;
 	padding:40px;
 }
 .footer-logo{
 	font-size:28px;
 	float:left;
-	padding:20px 30px;
 }
 .footer-list{
 	float:right;
