--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,7 +25,7 @@ li{
 
 
 body{
-	background-image:url("sources/IMG_1098.jpg");
+	background-image:url("../sources/IMG_1098.jpg");
 	background-size:cover;
 }
 .main{
