--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,6 +41,7 @@ body{
 	background-color:#2f5167;
 	color:#fff;
 	height:80px;
+	margin-bottom:0px;
 }
 .footer-logo{
 	font-size:28px;
@@ -51,5 +52,5 @@ body{
 }
 .footer-list li{
 	list-style:none;
-	padding-bottom:20px;
+	padding-bottom:10px;
 }
