--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,7 +54,7 @@ body{
 	background-color:#2f5167;
 	color:#fff;
 	height:80px;
-	margin-bottom:0px;
+	width:100%;
 }
 .footer-logo{
 	font-size:28px;
