--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,9 +6,9 @@ li{
 	top:0px;
 	left:0px;
 	width:100%;
-	background-color:#26d0c9;
+	background-color:rgb(74, 216, 104,0.7);
 	color:#fff;
-	height:90px;
+	height:80px;
 }
 .header-logo{
     font-size:36px;
@@ -27,10 +27,10 @@ li{
 	display:block;
 }
 .about{
-	display:inline-block;
+	cursor: pointer;
 }
 .contact{
-	display:inline-block;
+	cursor: pointer;
 }
 
 
