--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,7 +13,7 @@ li{
 .header-logo{
     font-size:36px;
     float:left;
-    padding:auto 30px;
+    padding:10px 30px;
 	padding-right:50px;
 }
 .header a{
@@ -21,8 +21,8 @@ li{
 	border:none;
 	float:left;
 	display: inline-block;
-    padding:auto 30px;
-    height:100px;
+    padding:20px 30px;
+    height:80;
 }
 .header-list li{
 	display:block;
@@ -57,6 +57,7 @@ body{
 .footer-logo{
 	font-size:28px;
 	float:left;
+	color:rgba(255,255,255,0.4);
 }
 .footer-list{
 	text-align: center;
