--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -55,6 +55,7 @@ body{
 	height:80px;
 }
 .footer-logo{
+	padding:12px 12px;
 	font-size:28px;
 	float:left;
 	color:rgba(255,255,255,0.4);
@@ -63,6 +64,7 @@ body{
 	text-align: center;
 }
 .footer-list li{
+	padding:20px 30px;
 	float:left;
 	padding-left:30px;
 	margin:auto auto;	
