--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,7 +21,7 @@ li{
 	border:none;
 	float:left;
 	display: inline-block;
-    padding:20px 30px;
+    padding:15px 30px;
     height:80;
 }
 .header-list li{
@@ -64,7 +64,7 @@ body{
 	text-align: center;
 }
 .footer-list li{
-	padding:20px 30px;
+	padding:auto 30px;
 	float:left;
 	padding-left:30px;
 	margin:auto auto;	
