--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ li{
 	float:left;
 	display: inline-block;
     padding:15px 30px;
-    height:80;
+    height:80px;
 }
 .header-list li{
 	display:block;
@@ -56,6 +56,7 @@ body{
 }
 .footer-logo{
 	padding:12px 12px;
+	padding-right:50px;
 	font-size:28px;
 	float:left;
 	color:rgba(255,255,255,0.4);
@@ -64,7 +65,7 @@ body{
 	text-align: center;
 }
 .footer-list li{
-	padding:auto 30px;
+	margin:auto;
 	float:left;
 	padding-left:30px;
 	margin:auto auto;	
