--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,12 +47,12 @@ body{
 
 .footer{
 	position: absolute;
-	top:90%;
+	top:100%-50px;
 	left:0px;
 	background-color:#2f5167;
 	color:#fff;
 	width:100%;
-	height:40px;
+	height:50px;
 }
 .footer-logo{
 	padding:6px 6px;
