--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
-
+        <meta charset="UTF-8">
+	    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
         <h1>HIHIIHIHI</h1>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
