--- a/templates/header.html
+++ b/templates/header.html
@@ -5,9 +5,18 @@
 	    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
-        <h1>HIHIIHIHI</h1>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+		<div class="header">
+			<div class="header-logo">Page</div>
+			<div class="header-list">
+				<ul>
+					<li><a class="about btn">About</a></li>
+					<li><a class="port btn">PortFolio</a></li>
+					<li><a class="contact btn">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
