--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -63,6 +63,7 @@ body{
 	#background-size:cover;
 }
 .main{
+	position:absolute;
 	padding:100px 80px;
 }
 .main-contents{
@@ -132,7 +133,11 @@ body{
 .main-inner{
 	padding-left:25%;	
 	padding-right:25%;
-
-	width:50%;
+	overflow:visible;
+	
+	width:auto;
+}
+.main-contents{
+	overflow:visible;
 }
 
