--- a/css/portfolio/stylesheet-portfolio.css
+++ b/css/portfolio/stylesheet-portfolio.css
@@ -85,14 +85,17 @@ body{
 }
 
 .main-sabcontents{
+	#margin:auto auto;
+	#text-align:center;
+}
+.main-icons{
 	margin:auto auto;
 	text-align:center;
-
 }
-.main-sabcontents a:link { color:#000000; text-decoration:none }
-.main-sabcontents a:visited { color:#000000; text-decoration:none }
-.main-sabcontents a:hover { color:#000000; text-decoration:none }
-.main-sabcontents a:active { color:#000000; text-decoration:none }
+.main-icons a:link { color:#000000; text-decoration:none }
+.main-icons a:visited { color:#000000; text-decoration:none }
+.main-icons a:hover { color:#000000; text-decoration:none }
+.main-icons a:active { color:#000000; text-decoration:none }
 
 .github{
 	font-size:50px;
@@ -100,62 +103,10 @@ body{
 }
 .twitter{
 	font-size:50px;
-	#padding-left:15px;
+	padding-left:15px;
+	color:#00acee;
 }
 
-/*
-.footer{
-	position: absolute;
-	top:100%-50px;
-	left:0px;
-	background-color:#2f5167;
-	color:#fff;
-	width:100%;
-	height:50px;
+.break{
+	border-bottom:1px solid #000000;
 }
-.footer-logo{
-	padding:6px 6px;
-	padding-right:50px;
-	font-size:28px;
-	float:left;
-	color:rgba(255,255,255,0.4);
-}
-.footer-list{
-	text-align: center;
-}
-.footer-list li{
-	margin:auto;
-	float:left;
-	padding-left:30px;
-	margin:auto auto;	
-}
-*/
-
-/*
-.modal-wrapper{
-	width:50%;
-	height:74%;
-	position:fixed;
-	top:13%;
-	left:25%;
-	border:2px solid #aaa;
-	background:#fff;
-	display:none;
-	z-index:10;
-}
-.modal-container{
-}
-.modal-title{
-	float:left;
-	color:rgba(75, 219, 106, 0.7);
-}
-.modal-inner h3{
-	background-color:red;
-}
-.back{
-	font-size:20px;
-	float:right;
-	cursor:pointer;
-}
-*/
-
